# sql-query-env

./: .gitignore  Dockerfile  README.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  tasks.py
data/: queries.json  schemas.json
server/: Dockerfile  app.py  environment.py
